# cppchess

./: CMakeLists.txt  README.md
include/: Bishop.h  Board.h  Game.h  King.h  Knight.h  Pawn.h  Piece.h  Queen.h  Rook.h  Square.h
src/: main.cpp
src/core/: Bishop.cpp  Board.cpp  King.cpp  Knight.cpp  Pawn.cpp  Piece.cpp  Queen.cpp  Rook.cpp  Square.cpp
src/game/: Game.cpp
